--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <input type="text" placeholder="Ваше имя">
     <input type="text" placeholder="Ваш телефон">
     <input type="text" placeholder="Ваш E-mail">
-    <button>Отправить запрос</button>
+    <button>Отправить запрос на приняте решения</button>
 </div>
 
 </body>
